Updated Copyright notice

--- a/RepairMeshSectionMismatch2.uplugin
+++ b/RepairMeshSectionMismatch2.uplugin
@@ -5,11 +5,11 @@
 	"FriendlyName": "RepairMeshSectionMismatch2",
 	"Description": "",
 	"Category": "Other",
-	"CreatedBy": "",
-	"CreatedByURL": "",
-	"DocsURL": "",
+	"CreatedBy": "Exoception",
+	"CreatedByURL": "http://exoception.com",
+	"DocsURL": "https://github.com/etbh/RepairMeshSectionMismatch2/blob/master/Readme.md",
 	"MarketplaceURL": "",
-	"SupportURL": "",
+	"SupportURL": "https://github.com/etbh/RepairMeshSectionMismatch2/issues",
 	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"Installed": false,
